# GameOfLife

./: Dockerfile  README.md  docker-compose.yaml  migrate-mongo-config.js  nginx.conf  package-lock.json  package.json  pyproject.toml
app/: db.py  main.py
migrations/: 20241114112748-add_is_done_is_dropped_fields.js
services/backend/: Dockerfile  package-lock.json  package.json  pyproject.toml  tsconfig.json
services/backend/src/: database.py  main.py  server.ts  tsconfig.json
services/backend/src/controllers/: task.controller.ts
services/backend/src/crud/: create_tasks.py
services/backend/src/database/: init_db.py  models.py  mongo.ts
services/backend/src/models/: task.model.ts
services/backend/src/routes/: task.routes.ts
services/backend/src/schemas/: schemas.py
services/frontend/: Dockerfile  package-lock.json  package.json  vue.config.js
services/frontend/src/: App.vue  main.js
services/frontend/src/components/: CreateCaseView.vue  CreateTaskView.vue  DoneTaskView.vue  EmotionsView.vue  FoodView.vue  HelloWorld.vue  InProgressTaskView.vue  LearningView.vue  SportView.vue
services/frontend/src/plugins/: vuetify.js
services/frontend/src/router/: index.js
services/frontend/src/views/: FoodView.vue
templates/: index.html  main.js
