[tool.poetry]
name = "pinguin-tmc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.0"}
uvicorn = "^0.30.6"
jinja2 = "^3.1.4"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.35"
databases = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
